--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@
   background: var(--primary-color-dark);  
   box-shadow: 5px 5px 20px rgba(15, 2, 2, 0.473);
 }
-
+p{ font-size:20px;
+}
 
 img {
   display: flex;
