--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  --primary-color:linear-gradient(to bottom,  #dea2fc 30%, #6bcaf9 100%); 
+  --primary-color:linear-gradient(to bottom,rgb(207, 131, 248) 30%, #48bcf7 100%); 
   --primary-color-dark:linear-gradient(to bottom, #a145ce 30%, #4bacdc 100%);
   --text-dark: #020617;
   --text-light: #1e293b;
@@ -15,6 +15,32 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+html,
+body {
+  scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
+}
+
+img {
+  display: flex;
+  width: 100%;
+}
+
+.images {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+  transition: 0.3s;
+  color: var(--primary-color);
+}
+
+ul {
+  list-style: none;
 }
 
 .btn {
@@ -35,23 +61,8 @@
   box-shadow: 5px 5px 20px rgba(15, 2, 2, 0.473);
 }
 
-img {
-  display: flex;
-  width: 100%;
-}
-
-a {
-  text-decoration: none;
-  transition: 0.3s;
-  color: var(--primary-color);
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-}
 
 nav {
-  position: fixed;
   isolation: isolate;
   width: 100%;
   z-index: 6;
@@ -66,9 +77,7 @@ nav {
   background: var(--text-dark);
 }
 
-.nav__logo img{width: 45px;
-  font-weight: 700;
-  color: var(--white);
+.nav__logo img,h4{display: none;
 }
 
 .nav__menu__btn {
@@ -82,14 +91,14 @@ nav {
   top: 60px;
   left: 0;
   width: 100%;
-  padding: 2rem;
+  padding: 0;
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
-  background: var(--text-dark);
+  background-color: var(--text-dark);
   transition: 0.5s;
   z-index: -1;
   transform: translateY(-100%);
@@ -101,7 +110,7 @@ nav {
 
 .nav__links a {
   font-weight: 600;
-  color:black;
+  color:white;
   text-decoration: none;
 }
 
@@ -127,9 +136,6 @@ nav {
   width: 100%;
   transition: width .3s;
 }
-
-
-
 
 .nav__links .sketch{
   background: linear-gradient(to right, #c24efd 0%, #54c4fc 100%); 
@@ -159,7 +165,7 @@ nav {
 
 .container__left h1 {
   margin-bottom: 2rem;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 4.5rem;
   color: var(--text-dark);
@@ -197,11 +203,6 @@ nav {
   }
 }
 
-.images {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .tent-1 {
   max-width: 300px;
@@ -218,14 +219,14 @@ nav {
 }
 
 .content {
-  padding-block: 0 5rem;
+  padding-block: 0 4rem;
   padding-inline: 2rem;
   text-align: center;
 }
 
 .container__left h4 {
   margin-bottom: 1rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 500;
   color: var(--white);
 }
@@ -291,116 +292,6 @@ nav {
 }
 
 
-
-
-
-@media (width > 768px) {
-  nav {
-    position: static;
-    padding: 2rem 1rem;
-    max-width: var(--max-width);
-    margin-inline: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-  }
-
-  .nav__header {
-    flex: 1;
-    padding: 0;
-    background-color: transparent;
-  }
-
-  .nav__logo a {
-    color: var(--text-dark);
-  }
-
-  .nav__menu__btn {
-    display: none;
-  }
-
-  .nav__links {
-    position: static;
-    padding: 0;
-    flex-direction: row;
-    background-color: transparent;
-    transform: none;
-  }
-
-  .nav__links a,
-  .nav__links a:hover {
-    color: var(--text-dark);
-  }
-
-  .nav__btns {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  .nav__btns .btn {
-    font-size: 1.5rem;
-    color: var(--text-dark);
-    background-color: transparent;
-  }
-
-  .container {
-    grid-template-columns: 2fr 3fr;
-    align-items: center;
-    padding: 2rem 0;
-  }
-
-  .container__left {
-    text-align: left;
-  }
-
-  .location{
-    border: none;
-  }
-}
-
-@media (width > 1024px) {
-  .container__right {
-    grid-template-columns: 1fr 2fr;
-    align-items: center;
-  }
-
-  .container__right::before {
-    bottom: unset;
-    top: 0;
-    height: 90%;
-  }
-
-  .images {
-    flex-direction: column;
-  }
-
-  .tent-1 {
-    width: calc(100% + 10rem);
-    max-width: 325px;
-    transform: translate(-2rem, 2rem);
-  }
-
-  .tent-2 {
-    max-width: 200px;
-    transform: translate(4rem, -1rem);
-  }
-
-  .content {
-    padding-block: 5rem;
-    text-align: left;
-    max-width: 400px;
-    margin-inline-start: unset;
-  }
-  
-}
-
-
-
-
-
 .section__container {
   max-width: var(--max-width);
   margin: auto;
@@ -436,25 +327,6 @@ nav {
 }
 
 
-img {
-  display: flex;
-  width: 100%;
-}
-
-a {
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-ul {
-  list-style: none;
-}
-
-html,
-body {
-  scroll-behavior: smooth;
-}
-
 
 .header__container {
   display: grid;
@@ -476,12 +348,13 @@ body {
 }
 
 .header__content .section__description {
+  margin-top: 20px;
   text-align: center;
 }
 
 .header__content form {
-  margin-top: 4rem;
-  padding: 1rem;
+  margin-top: 1rem;
+  padding: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -494,14 +367,17 @@ body {
 }
 
 .header__content .input__group {
-  flex: 1 0 125px;
+  flex: 1 0 50px;
   display: grid;
   gap: 10px;
 }
 
 .header__content label {
-  font-size: 1.1rem;
-  font-weight: 500;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  margin-bottom: 5px;
+  font-weight: 400;
   color: var(--text-dark);
 }
 
@@ -509,7 +385,7 @@ body {
   width: 100%;
   outline: none;
   border: none;
-  font-size: 1rem;
+  font-size: 1.1rem;
   background-color: transparent;
   color: var(--text-light);
 }
@@ -587,15 +463,21 @@ body {
 }
 
 .swiper-slide {
-  min-width: 200px;
+  min-width: 400px;
 }
 
-
+.swiper-wrapper {display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  row-gap: 2px;
+}
 .popular__card {
   margin-inline: 1rem;
-  height: 300px;
+  margin-bottom: 20px;
+  height: 200px;
   overflow: hidden;
-  border-radius: 3rem;
+  border-radius: 1.5rem;
   background: var(--primary-color);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
@@ -606,7 +488,7 @@ body {
 }
 
 .popular__card img{
-  width: 60%;
+  width: 30%;
   padding-left: 25px;
   padding-top: 10px;
 }
@@ -672,48 +554,6 @@ body {
   font-size: 1.2rem;
 }
 
-.explore__container {
-  display: grid;
-  gap: 2rem 1rem;
-  overflow: hidden;
-}
-
-.explore__image img {
-  max-width: 475px;
-  margin-inline: auto;
-  border-radius: 2rem;
-  box-shadow: -30px -30px 0px rgba(0, 0, 0, 0.1);
-}
-
-.explore__content .section__description {
-  padding-block: 2rem;
-}
-
-.explore__content .btn {
-  padding: 1.25rem 2.5rem;
-  font-size: 1.5rem;
-  border-radius: 1.25rem;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-}
-
-.explore__grid {
-  margin-top: 4rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
-
-.explore__grid h4 {
-  font-size: 3rem;
-  font-weight: 500;
-  color: var(--text-dark);
-}
-
-.explore__grid p {
-  color: var(--text-light);
-}
-
-
 
 .image-client{
       font-size: smaller;
@@ -721,7 +561,24 @@ body {
   box-shadow:2px #f3f4f6;
 }
 
-
+.subscribe__container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.subscribe__content{
+  height: 20rem;
+  padding: 15px;
+  width: 28rem;
+  margin-bottom: 20px;
+  align-items: center;
+  display: grid;
+  gap: 4rem 2rem;
+  border-radius: 1.5rem;
+  
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
 
 .subscribe__container :is(.section__header, .section__description) {
   max-width: 600px;
@@ -730,14 +587,34 @@ body {
   text-align: center;
 }
 
+input,textarea{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
+  padding: 10px;
+  color: #100f10;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  outline: none;
+  border: none;
+  font-size: 1.1rem;
+  box-shadow: 0px 0px 20px rgba(130, 129, 129, 0.2);
+}
+
 
 footer {
   background: var(--primary-color);
 }
 
 .footer__container {
+  padding-left: 10px;
   display: grid;
   gap: 4rem 2rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer__logo {
@@ -818,25 +695,60 @@ footer {
 }
 
 @media (width > 540px) {
-  .client__content {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    margin-left: 2rem;
-    width: 75%;
-  }
-
-  .client__btns {
-    margin-top: 2rem;
-  }
-
   .footer__container {
     grid-template-columns: repeat(2, 1fr);
   }
+  .swiper-slide {
+    min-width: 400px;
+  }
+}
+
+@media (width>680px) {
+ 
+.swiper-wrapper {display: flexbox;
+  flex-direction: row;
+}
+.swiper-slide {
+  min-width: 200px;
+}
+
+.popular__card {
+  margin-inline: 1rem;
+  height: 320px;
+  overflow: hidden;
+  border-radius: 1.5rem;
+  background: var(--primary-color);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.subscribe__content{
+  padding: 30px;
+  width: 40rem;
+
+}
+
+.popular__card img{
+  width: 60%;
+  padding-left: 25px;
+  padding-top: 10px;
+}
 }
 
 @media (width > 768px) {
+  .nav__logo img,h4{ display: unset;
+  }
+  .nav__logo img{width: 45px;
+    font-weight: 700;
+    color: var(--white);
+  }
+  .container__left h1 {
+    margin-bottom: 2rem;
+    font-size: 3.5rem;
+    font-weight: 700;
+    line-height: 4.5rem;
+    color: var(--text-dark);
+  }
+
   nav {
     position: static;
     padding: 1.5rem 1rem;
@@ -847,6 +759,7 @@ footer {
     justify-content: space-between;
     gap: 1rem;
   }
+
 
   .nav__header {
     flex: 1;
@@ -867,19 +780,29 @@ footer {
     display: none;
   }
 
-  .nav__links {
-    position: static;
-    width: fit-content;
-    padding: 0;
-    flex-direction: row;
-    background-color: transparent;
-    transform: none !important;
-  }
 
-  .nav__links a {
+  .nav__logo a {
     color: var(--text-dark);
   }
 
+  .nav__menu__btn {
+    display: none;
+  }
+
+  .nav__links {
+    position: static;
+    padding: 0;
+    flex-direction: row;
+    background:none;
+    transform: none;
+    width: fit-content;
+  }
+
+  .nav__links a{
+    color: var(--text-dark);
+  }
+
+  
   .nav__links a:hover {
     color: var(--primary-color);
   }
@@ -887,8 +810,31 @@ footer {
   .nav__btns {
     flex: 1;
     display: flex;
+    align-items: center;  
     justify-content: flex-end;
+    gap: 1rem;
   }
+
+  .nav__btns .btn {
+    font-size: 1.5rem;
+    color: var(--text-dark);
+    background-color: transparent;
+  }
+
+  .container {
+    grid-template-columns: 2fr 3fr;
+    align-items: center;
+    padding: 2rem 0;
+  }
+
+  .container__left {
+    text-align: left;
+  }
+
+  .location{
+    border: none;
+  }
+
 
   .header__container {
     padding-top: 2rem;
@@ -917,19 +863,6 @@ footer {
     z-index: 10;
   }
 
-  .choose__container {
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-  }
-
-  .explore__container {
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-  }
-
-  .explore__content {
-    grid-area: 1/1/2/2;
-  }
 
   .client__btns {
     position: absolute;
@@ -959,9 +892,50 @@ footer {
   }
 }
 
+
+
+
+
+
+
 @media (width > 1024px) {
+  .container__right {
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+  }
+
+  .container__right::before {
+    bottom: unset;
+    top: 0;
+    height: 90%;
+  }
+
+  .images {
+    flex-direction: column;
+  }
+
+  .tent-1 {
+    width: calc(100% + 10rem);
+    max-width: 325px;
+    transform: translate(-2rem, 2rem);
+  }
+
+  .tent-2 {
+    max-width: 200px;
+    transform: translate(4rem, -1rem);
+  }
+
+  .content {
+    padding-block: 5rem;
+    text-align: left;
+    max-width: 400px;
+    margin-inline-start: unset;
+  }
+  
   .header__image {
     gap: 1.5rem;
     grid-auto-rows: 90px;
   }
 }
+
+
