--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ body {
   scroll-behavior: smooth;
   font-family: "Montserrat", sans-serif;
 }
-
+p{ font-size:15px;
+}
 img {
   display: flex;
   width: 100%;
